add new instance regarding ConfigParser

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,3 +1,20 @@
 [app]
 page = com.byton.ice.android.multimedia
 activity = /com.byton.ice.android.multimedia.ui.DRTControlActivity
+
+[db]
+username = byton
+passwd = super
+
+[es]
+username = root
+passwd = byton[]\
+host = 10.13.3.92
+
+[es_server]
+passwd = root
+login = root
+
+[server]
+login = root
+
