Add new files for shutil and log_to_syslog.

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -11,10 +11,10 @@ username = root
 passwd = byton[]\
 host = 10.13.3.92
 
-[es_server]
-passwd = root
-login = root
+[labcar01]
+username = tester
+passwd = byton[]\
+host = 10.13.2.111
+port = 22
 
-[server]
-login = root
 
